# libvgm

./: .gitignore  CMakeLists.txt  COPYING  Makefile  README.md  audemutest.c  libEmu.vcxproj  libEmu.vcxproj.filters  libVgmTest.vcxproj  libVgmTest.vcxproj.filters  opz_test.cpp  player.cpp  vgm2wav.c  vgm2wav.cpp  vgm2wav.h  vgmtest.c
.github/workflows/: GHA.yml
audio/: AudioStream.c  CMakeLists.txt
emu/: CMakeLists.txt  EmuCores.h  EmuHelper.h  EmuStructs.h  Resampler.c  SoundDevs.h  SoundEmu.c  SoundEmu.h  dac_control.c
emu/cores/: 2151intf.c  2151intf.h  2413intf.c  2413intf.h  2612intf.c  2612intf.h  262intf.c  262intf.h  adlibemu_opl_inc.c  ay8910.c  ayintf.c  ayintf.h  bsmt2000.c  bsmt2000.h  c140.c  c140.h  c219.c  c219.h  c352.c  c352.h  c6280_mame.c  c6280intf.c  c6280intf.h  emu2413.c  es5503.c  es5503.h  es5506.c  es5506.h  gb.c  gb.h  gb_mame.c  gb_mame.h  gbintf.c  gbintf.h  ics2115.c  ics2115.h  iremga20.c  iremga20.h  k005289.c  k005289.h  (+84 more)
emu/cores/ymfm/: README.md
player/: CMakeLists.txt  dblk_compr.c  droplayer.cpp  droplayer.h  droplayer.hpp  droplayer_c.cpp  droplayerbase.h  gymplayer.cpp  gymplayer.hpp  playera.cpp  playerbase.cpp  playerbase.h  playerbase.hpp  playerbase_c.hpp  s98player.cpp  s98player.h  s98player.hpp  s98player_c.cpp  s98playerbase.h  vgmplayer.cpp  vgmplayer.h  vgmplayer.hpp  vgmplayer_c.cpp  vgmplayer_cmdhandler.cpp  vgmplayerbase.h
player-c/: CMakeLists.txt  cpp2c-regex.txt  engine_base.c  engine_base.h  engine_dro.c  engine_dro.h  engine_gym.c  engine_gym.h  engine_s98.c  engine_s98.h  engine_vgm-commands.c  engine_vgm-internal.h  engine_vgm.c  engine_vgm.h  playera.c  playera.h
utils/: CMakeLists.txt  DataLoader.c  FileLoader.c  FileLoader.h  MemoryLoader.c
vgm/: CMakeLists.txt
